--- a/Lab5/templates/add.html
+++ b/Lab5/templates/add.html
@@ -2,6 +2,7 @@
 <html>
 
 <body>
+    <link rel="stylesheet" src="/style.css">
     <h1>Add Person</h1>
     <form method="post">
         {% csrf_token %}
