--- a/Lab5/templates/show.html
+++ b/Lab5/templates/show.html
@@ -2,6 +2,7 @@
 <html>
 
 <body>
+    <link rel="stylesheet" src="/style.css">
     <h1>People List</h1>
     <ul>
         {% for person in people %}
